--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
     <script src="https://use.fontawesome.com/85e65888f4.js"></script>
     <script src="https://kit.fontawesome.com/2b64ab41c8.js" crossorigin="anonymous"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6E7P137R0P"></script>
-    <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
     <script src="script.js"></script>
 </body>
 
