--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div id="message-notification" style="display:none; position: fixed; top: 20px; right: 20px; padding: 10px; background-color: green; color: white;"></div>
     <header class="bg-light text-center py-5">
         <div class="container">
             <h5 class="display-4">Ethan/yiwei feng</h5>
