--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li class="list-inline-item"><a class="nav-link" href="#skills">Skills</a></li>
                 <li class="list-inline-item"><a class="nav-link" href="#experience">Work Experience</a></li>
                 <li class="list-inline-item"><a class="nav-link" href="#education">Education</a></li>
+                <li class="list-inline-item"><a class="nav-link" href="#achievements">Achievements</a></li>
                 <li class="list-inline-item"><a class="nav-link" href="#contact">Contact</a></li>
             </ul>
         </div>
@@ -121,7 +122,20 @@
         </div>
     </section>
 
-    <section id="contact" class="py-5">
+    <section id="achievements" class="py-5">
+        <div class="container">
+            <h2 class="section-heading">Achievements</h2>
+            <div class="achievement-card">
+                <a href="https://www.hackerrank.com/certificates/ab6c95181e1d" target="_blank">
+                    <img src="1695703221464.jpg" alt="HackerRank Certificate" width="100%">
+                </a>
+            </div>
+        </div>
+    </section>
+    
+    
+
+    <section id="contact" class="bg-light py-5">
         <div class="container">
             <h2 class="section-heading">Contact</h2>
             <form id="contact-form">
