--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
                         <img src="SQLinter.jpg" alt="HackerRank Certificate" width="100%">
                     </a>
                 </div>
+                <div class="achievement-card">
+                    <a href="https://www.certmetrics.com/amazon/electronic_certificate.aspx?cert=5B758FA67666D8EA4E8CCFB465CF8717O8E760D107E0D1C3A3E3943C79F92E7FE" target="_blank">
+                        <img src="AWS Certified Cloud Practitioner certificate.jpg" alt="AWS Certified Cloud Practitioner certificate" width="100%">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
