minor changes for correction

--- a/index.html
+++ b/index.html
@@ -90,11 +90,6 @@
                       <h6>City:</h6>
                       <span>Canberra</span>
                     </li>
-                    <!-- age -->
-                    <li>
-                      <h6>Age:</h6>
-                      <span>28</span>
-                    </li>
                   </ul>
                 </div>
                 <!-- info bar about end -->
@@ -433,11 +428,12 @@
                         <!-- service content -->
                         <div class="art-service-ib-content">
                           <!-- title -->
-                          <h5 class="mb-15">Lecturer</h5>
+                          <h5 class="mb-15">Course Convenor of IT</h5>
+                          <h6 class="mb-15" style="color:#ffc107;">Current Job</h6>
                           <!-- text -->
                           <div class="mb-15">
                             <ul>
-                              <li>Delivered lectures on programming languages and software development.</li>
+                              <li>Delivering lectures on programming languages and software development.</li>
                               <li>Provided guidance and mentorship to students on their projects.</li>
                               <li>Contributed to curriculum development and course improvement initiatives.</li>
                           </ul>
@@ -514,7 +510,7 @@
                       <div class="art-a art-price">
                         <!-- price body -->
                         <div class="art-price-body">
-                          <h5 class="mb-30">Master of Information Technology and System</h5>
+                          <h5 class="mb-30">Master of Information Technology and Systems</h5>
                           <!-- price cost -->
                           <div class="art-price-cost">
                             <div class="art-number">University of Canberra</div>
@@ -522,14 +518,10 @@
                           <!-- price cost end -->
                           <!-- price list -->
                           <ul class="art-price-list">
-                            <!-- list item -->
                             <li>Technology Capstone Project </li>
-                            <!-- list item -->
                             <li>SoftWare Technology</li>
                             <li>NetWork Architecture</li>
                           </ul>
-                          <!-- price list end -->
-                          <!-- button -->
                           <a
                             href="https://www.canberra.edu.au/" target="_blank" data-no-swup
                             >University of Canberra</a
@@ -682,11 +674,8 @@
                               <i class="fas fa-chevron-right"></i>
                             </div>
                           </div>
-                          <!-- slider navigation -->
                         </div>
-                        <!-- right side end -->
                       </div>
-                      <!-- slider navigation end -->
                     </div>
                     <!-- col end -->
                   </div>
