add the google analysis

--- a/index.html
+++ b/index.html
@@ -866,6 +866,7 @@
     <script src="js/plugins/fancybox.min.js"></script>
     <!-- swup js -->
     <script src="js/plugins/swup.min.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6E7P137R0P"></script>
 
     <!-- main js -->
     <script src="js/main.js"></script>
