--- a/contact.html
+++ b/contact.html
@@ -431,11 +431,11 @@
                       <ul class="sub-menu">
                         <!-- lvl 2 nav link -->
                         <li class="menu-item">
-                          <a href="portfolio-2-col.html">2 column</a>
+                          <a href="htbsolution1.html">Footprinting Lab Easy</a>
                         </li>
                         <!-- lvl 2 nav link -->
                         <li class="menu-item">
-                          <a href="portfolio-3-col.html">3 column</a>
+                          <a href="portfolio-3-col.html">Footprinting Lab Medium</a>
                         </li>
                       </ul>
                       <!-- sub menu end -->
