--- a/contact.html
+++ b/contact.html
@@ -435,7 +435,7 @@
                         </li>
                         <!-- lvl 2 nav link -->
                         <li class="menu-item">
-                          <a href="portfolio-3-col.html">Footprinting Lab Medium</a>
+                          <a href="htbsolution2.html">Footprinting Lab Medium</a>
                         </li>
                       </ul>
                       <!-- sub menu end -->
