--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@
                 <!-- links frame -->
                 <div class="art-links-frame p-15-15">
                   <!-- download cv button -->
-                  <a href="files/cv.txt" class="art-link" download data-no-swup
+                  <a href="Ethan Feng.pdf" class="art-link" download data-no-swup
                     >Download cv <i class="fas fa-download"></i
                   ></a>
                 </div>
